@@ -1,5 +1,10 @@
 2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* configure.ac, src/lib/gmp_wrap.c: Support GMP with sbcl
+	for 32-bit machines.
+
+2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/weier.spad.pamphlet: Fix and clean up.
 
 2010-10-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
